borsh-derive/src/snapshots/borsh_derive__struct_de__tests__generic_named_fields_struct_borsh_skip.snap
---
source: borsh-derive/src/struct_de.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V, U> borsh::de::BorshDeserialize for G<K, V, U>
where
    U: borsh::de::BorshDeserialize,
    K: core::default::Default,
    V: core::default::Default,
{
    fn deserialize_reader<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        Ok(Self {
            x: core::default::Default::default(),
            y: borsh::BorshDeserialize::deserialize_reader(reader)?,
        })
    }
}

