borsh-derive/src/snapshots/borsh_derive__struct_de__tests__generic_tuple_struct_borsh_skip2.snap
---
source: borsh-derive/src/struct_de.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V, U> borsh::de::BorshDeserialize for G<K, V, U>
where
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
    U: core::default::Default,
{
    fn deserialize_reader<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        Ok(
            Self(
                borsh::BorshDeserialize::deserialize_reader(reader)?,
                core::default::Default::default(),
            ),
        )
    }
}

