borsh-derive/src/snapshots/borsh_derive__struct_de__tests__simple_generics.snap
---
source: borsh-derive/src/struct_de.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V> borsh::de::BorshDeserialize for A<K, V>
where
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
{
    fn deserialize_reader<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        Ok(Self {
            x: borsh::BorshDeserialize::deserialize_reader(reader)?,
            y: borsh::BorshDeserialize::deserialize_reader(reader)?,
        })
    }
}

